Forest for plants and temperature for heat