@@ -1,9 +1,11 @@
 package com.terraforming.ares.states;
 
 import com.terraforming.ares.mars.MarsGame;
+import com.terraforming.ares.model.Constants;
+import com.terraforming.ares.model.Player;
 import com.terraforming.ares.model.turn.TurnType;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
@@ -19,14 +21,27 @@ public class PerformBlueActionState extends AbstractState {
 
     @Override
     public List<TurnType> getPossibleTurns(String playerUuid) {
-        if (marsGame.getPlayerByUuid(playerUuid).getNextTurn() != null) {
+        Player player = marsGame.getPlayerByUuid(playerUuid);
+        if (player.getNextTurn() != null) {
             return Collections.emptyList();
         } else {
-            return Arrays.asList(
+            List<TurnType> turns = new ArrayList<>(List.of(
                     TurnType.PERFORM_BLUE_ACTION,
-                    TurnType.SELL_CARDS,
-                    TurnType.SKIP_TURN
-            );
+                    TurnType.SELL_CARDS
+            ));
+
+            if (player.getPlants() < Constants.FOREST_PLANT_COST && player.getHeat() < Constants.TEMPERATURE_HEAT_COST) {
+                turns.add(TurnType.SKIP_TURN);
+            } else {
+                if (player.getPlants() >= Constants.FOREST_PLANT_COST) {
+                    turns.add(TurnType.PLANT_FOREST);
+                }
+                if (player.getHeat() >= Constants.TEMPERATURE_HEAT_COST) {
+                    turns.add(TurnType.INCREASE_TEMPERATURE);
+                }
+            }
+
+            return turns;
         }
     }
 
